--- a/#src/html/_features.html
+++ b/#src/html/_features.html
@@ -4,7 +4,11 @@
     <div class="features__boxes boxes">
       <div class="features__box box">
         <div class="features__icon">
-          <img class="image" src="@img/icons/sprite.svg#clock" alt="" />
+          <img
+            class="image"
+            src="@img/icons/sprite.svg#clock"
+            alt="icon: clock"
+          />
         </div>
         <h3 class="features__title">Гибкий график работы</h3>
         <div class="features__text">
@@ -15,8 +19,33 @@
           <p>Мы подстроимся под время удобное для вас.</p>
         </div>
       </div>
-      <div class="features__box box"></div>
-      <div class="features__box box"></div>
+      <div class="features__box box">
+        <div class="features__icon">
+          <img class="image" src="@img/icons/sprite.svg#man" alt="icon: man" />
+        </div>
+        <h3 class="features__title">Индивидуальный подход к клиенту</h3>
+        <div class="features__text">
+          <p>Индивидуальность клиента требует индивидуальный подход.</p>
+          <p>Для вас, у нас бесплатная консультация</p>
+        </div>
+      </div>
+      <div class="features__box box">
+        <div class="features__icon">
+          <img
+            class="image"
+            src="@img/icons/sprite.svg#garanty"
+            alt="icon: garanty"
+          />
+        </div>
+        <h3 class="features__title">Гарантия 15 месяцев</h3>
+        <div class="features__text">
+          <p>
+            Мы отвечаем за качество нашей продукции, предоставляя гарантию 15
+            месяцев.
+          </p>
+          <p></p>
+        </div>
+      </div>
     </div>
   </div>
 </div>
