--- a/biadecor/index.html
+++ b/biadecor/index.html
@@ -83,13 +83,17 @@
     <a href="#" class="btn btn-reset first__btn">Акция до 10%</a>
   </div>
 </div>
-<div class="features">
-  <div class="container diagonal-box bg-two features__container">
+<div class="diagonal-box bg-two features">
+  <div class="container features__container">
     <h2 class="header__ver features__head">Преимущества</h2>
     <div class="features__boxes boxes">
       <div class="features__box box">
         <div class="features__icon">
-          <img class="image" src="images/icons/sprite.svg#clock" alt="" />
+          <img
+            class="image"
+            src="images/icons/sprite.svg#clock"
+            alt="icon: clock"
+          />
         </div>
         <h3 class="features__title">Гибкий график работы</h3>
         <div class="features__text">
@@ -100,8 +104,33 @@
           <p>Мы подстроимся под время удобное для вас.</p>
         </div>
       </div>
-      <div class="features__box box"></div>
-      <div class="features__box box"></div>
+      <div class="features__box box">
+        <div class="features__icon">
+          <img class="image" src="images/icons/sprite.svg#man" alt="icon: man" />
+        </div>
+        <h3 class="features__title">Индивидуальный подход к клиенту</h3>
+        <div class="features__text">
+          <p>Индивидуальность клиента требует индивидуальный подход.</p>
+          <p>Для вас, у нас бесплатная консультация</p>
+        </div>
+      </div>
+      <div class="features__box box">
+        <div class="features__icon">
+          <img
+            class="image"
+            src="images/icons/sprite.svg#garanty"
+            alt="icon: garanty"
+          />
+        </div>
+        <h3 class="features__title">Гарантия 15 месяцев</h3>
+        <div class="features__text">
+          <p>
+            Мы отвечаем за качество нашей продукции, предоставляя гарантию 15
+            месяцев.
+          </p>
+          <p></p>
+        </div>
+      </div>
     </div>
   </div>
 </div>
