add section about

--- a/biadecor/index.html
+++ b/biadecor/index.html
@@ -135,6 +135,36 @@
   </div>
 </div>
 
+        <div class="diagonal-box bg-two about">
+  <div class="container about__container">
+    <h2 class="header__ver about__head">О нас</h2>
+    <div class="about__boxes boxes">
+      <div class="about__box box">
+        <h3 class="about__title">Бесплатная установка</h3>
+        <div class="about__text">
+          <p>Изготовление на заказ и установка жалюзей разных видов</p>
+        </div>
+      </div>
+      <div class="about__box box">
+        <h3 class="about__title">10 лет опыта</h3>
+        <div class="about__text">
+          Более 10 лет опыта в сфере жалюзей и сезонные акции и скидки
+        </div>
+      </div>
+      <div class="about__box box">
+        <h3 class="about__title">Индивидуальный дизайн</h3>
+        <div class="about__text">
+          <p>
+            Индивидуальный подход к каждому заказу (замер, консультация,
+            установка)
+          </p>
+          <p></p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
       </main>
       <footer class="footer">
   <div class="container"></div>
