--- a/#src/index.html
+++ b/#src/index.html
@@ -7,6 +7,7 @@
 
       <main class="main">
         @include('html/_main.html')@include('html/_features.html')
+        @include('html/_about.html')
       </main>
       @include('html/footer.html')
     </div>
