--- a/#src/html/head.html
+++ b/#src/html/head.html
@@ -4,7 +4,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="theme-color" content="#111111" />
   <!-- <link rel="stylesheet" href="css/adv.css" /> -->
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/style.css?ver=1.0.0" />
+  <!-- подключение скриптов -->
+  <!-- <script defer src="js/vendor/swiper-bundle.min.js"></script> -->
+  <script defer src="js/main.min.js"></script>
   <!-- подключение favicon -->
   <link
     rel="icon"
