--- a/#src/html/_about.html
+++ b/#src/html/_about.html
@@ -1,4 +1,4 @@
-<div class="diagonal-box bg-two about">
+<div class="diagonal-box bg-two about" id="about">
   <div class="container about__container">
     <h2 class="header__ver about__head">О нас</h2>
     <div class="about__boxes boxes">
