--- a/#src/html/header.html
+++ b/#src/html/header.html
@@ -8,9 +8,11 @@
         <ul class="menu__list">
           <li class="menu__item"><a class="menu__link" href="">Главная</a></li>
           <li class="menu__item">
-            <a class="menu__link" href="">Контакты </a>
+            <a class="menu__link" href="#contacts">Контакты </a>
           </li>
-          <li class="menu__item"><a class="menu__link" href="">О нас</a></li>
+          <li class="menu__item">
+            <a class="menu__link" href="#about">О нас</a>
+          </li>
           <li class="menu__item">
             <a class="menu__link" href="">Каталог тканей</a>
           </li>
@@ -24,17 +26,17 @@
       </button>
     </div>
     <div class="header__social social">
-      <a href="" class="header__phone">
+      <a href="tel:+37378882475" class="header__phone">
         <img class="image" src="@img/icons/sprite.svg#phone" alt="" />
       </a>
       <ul class="social__list">
         <li class="social__item">
-          <a href="">
+          <a href="https://instagram.com">
             <img class="image" src="@img/icons/sprite.svg#instagram" alt="" />
           </a>
         </li>
         <li class="social__item">
-          <a href="">
+          <a href="https://facebook.com">
             <img class="image" src="@img/icons/sprite.svg#facebook" alt="" />
           </a>
         </li>
