add jalousie page

--- a/#src/html/header.html
+++ b/#src/html/header.html
@@ -6,17 +6,21 @@
     <div class="header__menu menu">
       <nav class="menu__body">
         <ul class="menu__list">
-          <li class="menu__item"><a class="menu__link" href="">Главная</a></li>
           <li class="menu__item">
-            <a class="menu__link" href="#contacts">Контакты </a>
+            <a class="menu__link" href="index.html">Главная</a>
           </li>
           <li class="menu__item">
-            <a class="menu__link" href="#about">О нас</a>
+            <a class="menu__link" href="index.html#contacts">Контакты </a>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link" href="index.html#about">О нас</a>
           </li>
           <li class="menu__item">
             <a class="menu__link" href="">Каталог тканей</a>
           </li>
-          <li class="menu__item"><a class="menu__link" href="">Жалюзи</a></li>
+          <li class="menu__item">
+            <a class="menu__link" href="jalousie.html">Жалюзи</a>
+          </li>
         </ul>
       </nav>
       <button type="button" class="menu__icon">
