--- a/#src/index.html
+++ b/#src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   @include('html/head.html', { "title":"Главная" })
   <body>
     <div class="wrapper">
@@ -11,9 +11,5 @@
       </main>
       @include('html/footer.html')
     </div>
-
-    <!-- подключение скриптов -->
-    <!-- <script defer src="js/libs.js"></script> -->
-    <script defer src="js/main.min.js"></script>
   </body>
 </html>
