--- a/biadecor/index.html
+++ b/biadecor/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -30,17 +30,21 @@
     <div class="header__menu menu">
       <nav class="menu__body">
         <ul class="menu__list">
-          <li class="menu__item"><a class="menu__link" href="">Главная</a></li>
           <li class="menu__item">
-            <a class="menu__link" href="#contacts">Контакты </a>
+            <a class="menu__link" href="index.html">Главная</a>
           </li>
           <li class="menu__item">
-            <a class="menu__link" href="#about">О нас</a>
+            <a class="menu__link" href="index.html#contacts">Контакты </a>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link" href="index.html#about">О нас</a>
           </li>
           <li class="menu__item">
             <a class="menu__link" href="">Каталог тканей</a>
           </li>
-          <li class="menu__item"><a class="menu__link" href="">Жалюзи</a></li>
+          <li class="menu__item">
+            <a class="menu__link" href="jalousie.html">Жалюзи</a>
+          </li>
         </ul>
       </nav>
       <button type="button" class="menu__icon">
@@ -217,9 +221,5 @@
 </footer>
 
     </div>
-
-    <!-- подключение скриптов -->
-    <!-- <script defer src="js/libs.js"></script> -->
-    <script defer src="js/main.min.js"></script>
   </body>
 </html>
