upd jalousie page

--- a/#src/html/roller.html
+++ b/#src/html/roller.html
@@ -4,9 +4,9 @@
     <h2 class="header__ver header__ver-right roller__head">Рулонные</h2>
     <div class="boxes roller__boxes roller__boxes-first">
       <div class="box-img">
-        <img class="image" src="@img/jalousie/roller.jpg" alt="" />
+        <img class="image" src="@img/jalousie/roller.png" alt="" />
       </div>
-      <div class="box-text roller__box">
+      <div class="box-text roller__box roller__box-first">
         <h2 class="box-title">Рулонные жалюзи</h2>
         <div class="box-text">
           <p>
@@ -20,6 +20,13 @@
         <div class="box-btns">
           <button class="btn btn-reset box-btn">Каталог тканей</button>
           <button class="btn btn-reset box-btn">Способ ухода</button>
+        </div>
+        <div class="roller__bottom">
+          <button class="roller__btn">
+            <svg class="roller__btn-svg" aria-hidden="true">
+              <use xlink:href="images/icons/sprite.svg#top-dark"></use>
+            </svg>
+          </button>
         </div>
       </div>
     </div>
@@ -58,7 +65,7 @@
     <h2 class="header__ver header__ver-right roller__head">римские</h2>
     <div class="boxes roller__boxes">
       <div class="box-img">
-        <img class="image" src="@img/jalousie/rome.png" alt="" />
+        <img class="image" src="@img/jalousie/rim.png" alt="" />
       </div>
       <div class="box-text roller__box">
         <h2 class="box-title">Римские шторы</h2>
