add page with fabric and modal window

--- a/#src/html/roller.html
+++ b/#src/html/roller.html
@@ -1,5 +1,5 @@
 <!-- roller -->
-<div class="diagonal-box roller">
+<div class="diagonal-box roller roller-roller">
   <div class="container roller__container">
     <h2 class="header__ver header__ver-right roller__head">Рулонные</h2>
     <div class="boxes roller__boxes roller__boxes-first">
@@ -18,8 +18,12 @@
           </p>
         </div>
         <div class="box-btns">
-          <button class="btn btn-reset box-btn">Каталог тканей</button>
-          <button class="btn btn-reset box-btn">Способ ухода</button>
+          <a href="fabric.html#roller" class="btn btn-reset box-btn"
+            >Каталог тканей</a
+          >
+          <button class="btn btn-reset box-btn" data-toggle="modal">
+            Способ ухода
+          </button>
         </div>
         <div class="roller__bottom">
           <button class="roller__btn">
@@ -33,7 +37,7 @@
   </div>
 </div>
 <!-- day-night -->
-<div class="diagonal-box roller">
+<div class="diagonal-box roller roller-day-night">
   <div class="container roller__container">
     <h2 class="header__ver header__ver-right roller__head">день ночь</h2>
     <div class="boxes roller__boxes roller__boxes-nobg">
@@ -52,15 +56,19 @@
           </p>
         </div>
         <div class="box-btns">
-          <button class="btn btn-reset box-btn">Каталог тканей</button>
-          <button class="btn btn-reset box-btn">Способ ухода</button>
+          <a href="fabric.html#day-night" class="btn btn-reset box-btn"
+            >Каталог тканей</a
+          >
+          <button class="btn btn-reset box-btn" data-toggle="modal">
+            Способ ухода
+          </button>
         </div>
       </div>
     </div>
   </div>
 </div>
 <!-- rome -->
-<div class="diagonal-box roller">
+<div class="diagonal-box roller roller-rome">
   <div class="container roller__container">
     <h2 class="header__ver header__ver-right roller__head">римские</h2>
     <div class="boxes roller__boxes">
@@ -78,7 +86,9 @@
           </p>
         </div>
         <div class="box-btns">
-          <button class="btn btn-reset box-btn">Каталог тканей</button>
+          <a href="fabric.html#rome" class="btn btn-reset box-btn"
+            >Каталог тканей</a
+          >
           <button class="btn btn-reset box-btn">Способ ухода</button>
         </div>
       </div>
@@ -86,7 +96,7 @@
   </div>
 </div>
 <!-- wood -->
-<div class="diagonal-box roller">
+<div class="diagonal-box roller roller-wood">
   <div class="container roller__container">
     <h2 class="header__ver header__ver-right roller__head">деревянные</h2>
     <div class="boxes roller__boxes roller__boxes-nobg">
@@ -104,7 +114,9 @@
           </p>
         </div>
         <div class="box-btns">
-          <button class="btn btn-reset box-btn">Каталог тканей</button>
+          <a href="fabric.html#wood" class="btn btn-reset box-btn"
+            >Каталог тканей</a
+          >
           <button class="btn btn-reset box-btn">Способ ухода</button>
         </div>
       </div>
@@ -112,7 +124,7 @@
   </div>
 </div>
 <!-- rollet -->
-<div class="diagonal-box roller">
+<div class="diagonal-box roller roller-rollet">
   <div class="container roller__container">
     <h2 class="header__ver header__ver-right roller__head">роллеты</h2>
     <div class="boxes roller__boxes">
@@ -129,15 +141,17 @@
           </p>
         </div>
         <div class="box-btns">
-          <button class="btn btn-reset box-btn">Каталог тканей</button>
+          <a href="fabric.html#rollet" class="btn btn-reset box-btn"
+            >Каталог тканей</a
+          >
           <button class="btn btn-reset box-btn">Способ ухода</button>
         </div>
       </div>
     </div>
   </div>
 </div>
-<!-- wood -->
-<div class="diagonal-box roller">
+<!-- setka -->
+<div class="diagonal-box roller roller-setka">
   <div class="container roller__container">
     <h2 class="header__ver header__ver-last roller__head">маскинтная сетка</h2>
     <div class="boxes roller__boxes roller__boxes-nobg">
@@ -154,7 +168,7 @@
           </p>
         </div>
         <div class="box-btns">
-          <button class="btn btn-reset box-btn">Каталог тканей</button>
+          <a href="fabric.html" class="btn btn-reset box-btn">Каталог тканей</a>
           <button class="btn btn-reset box-btn">Способ ухода</button>
         </div>
       </div>
