--- a/#src/jalousie.html
+++ b/#src/jalousie.html
@@ -5,7 +5,7 @@
     <div class="wrapper">
       @include('html/header.html')
       <main class="main">@include('html/roller.html')</main>
-      @include('html/footer.html')
+      @include('html/footer.html') @include('html/_modal.html')
     </div>
   </body>
 </html>
