--- a/biadecor/index.html
+++ b/biadecor/index.html
@@ -6,9 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="theme-color" content="#111111" />
   <!-- <link rel="stylesheet" href="css/adv.css" /> -->
+  <!-- <link rel="stylesheet" href="css/swiper-bundle.min.css" /> -->
+  <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
+  />
   <link rel="stylesheet" href="css/style.css?ver=1.0.0" />
   <!-- подключение скриптов -->
-  <!-- <script defer src="js/vendor/swiper-bundle.min.js"></script> -->
+  <script defer src="js/vendor/swiper-bundle.min.js"></script>
   <script defer src="js/main.min.js"></script>
   <!-- подключение favicon -->
   <link
@@ -40,7 +45,7 @@
             <a class="menu__link" href="index.html#about">О нас</a>
           </li>
           <li class="menu__item">
-            <a class="menu__link" href="">Каталог тканей</a>
+            <a class="menu__link" href="fabric.html">Каталог тканей</a>
           </li>
           <li class="menu__item">
             <a class="menu__link" href="jalousie.html">Жалюзи</a>
