add animation and hover

--- a/#src/html/header.html
+++ b/#src/html/header.html
@@ -1,8 +1,8 @@
 <header class="header">
   <div class="container header__container">
-    <div class="header__logo">
+    <a href="index.html" class="header__logo">
       <img class="image" src="@img/logo-header.svg" alt="Logo BIADecor" />
-    </div>
+    </a>
     <div class="header__menu menu">
       <nav class="menu__body">
         <ul class="menu__list">
