--- a/biadecor/fabric.html
+++ b/biadecor/fabric.html
@@ -29,9 +29,9 @@
     <div class="wrapper">
       <header class="header">
   <div class="container header__container">
-    <div class="header__logo">
+    <a href="index.html" class="header__logo">
       <img class="image" src="images/logo-header.svg" alt="Logo BIADecor" />
-    </div>
+    </a>
     <div class="header__menu menu">
       <nav class="menu__body">
         <ul class="menu__list">
