--- a/#src/html/_contacts.html
+++ b/#src/html/_contacts.html
@@ -26,16 +26,12 @@
           </li>
         </ul>
       </div>
-      <address class="contacts__adress">
-        str. Grenoble 128 of. 314,<br />
-        mun. Chișinau, MD2048<br />
-        Republica Moldova
-      </address>
-      <address class="contacts__adress">
-        str. Grenoble 128 of. 314,<br />
-        mun. Chișinau, MD2048<br />
-        Republica Moldova
-      </address>
+      <a href="tel:+37378882475" class="contacts__adress"
+        >Тел: +373 78 882 475</a
+      >
+      <a href="tel:+37378882475" class="contacts__adress"
+        >Тел: +373 78 882 475</a
+      >
     </div>
   </div>
 </div>
