--- a/biadecor/index.html
+++ b/biadecor/index.html
@@ -29,9 +29,9 @@
     <div class="wrapper">
       <header class="header">
   <div class="container header__container">
-    <div class="header__logo">
+    <a href="index.html" class="header__logo">
       <img class="image" src="images/logo-header.svg" alt="Logo BIADecor" />
-    </div>
+    </a>
     <div class="header__menu menu">
       <nav class="menu__body">
         <ul class="menu__list">
@@ -206,16 +206,12 @@
           </li>
         </ul>
       </div>
-      <address class="contacts__adress">
-        str. Grenoble 128 of. 314,<br />
-        mun. Chișinau, MD2048<br />
-        Republica Moldova
-      </address>
-      <address class="contacts__adress">
-        str. Grenoble 128 of. 314,<br />
-        mun. Chișinau, MD2048<br />
-        Republica Moldova
-      </address>
+      <a href="tel:+37378882475" class="contacts__adress"
+        >Тел: +373 78 882 475</a
+      >
+      <a href="tel:+37378882475" class="contacts__adress"
+        >Тел: +373 78 882 475</a
+      >
     </div>
   </div>
 </div>
