done adaptive for index.html + adap. menu

--- a/#src/html/_contacts.html
+++ b/#src/html/_contacts.html
@@ -26,10 +26,10 @@
           </li>
         </ul>
       </div>
-      <a href="tel:+37378882475" class="contacts__adress"
+      <a href="tel:+37378882475" class="contacts__phone"
         >Тел: +373 78 882 475</a
       >
-      <a href="tel:+37378882475" class="contacts__adress"
+      <a href="tel:+37378882475" class="contacts__phone"
         >Тел: +373 78 882 475</a
       >
     </div>
