--- a/#src/html/header.html
+++ b/#src/html/header.html
@@ -29,7 +29,7 @@
         <span></span>
       </button>
     </div>
-    <div class="header__social social">
+    <div class="header__social social" data-da=".menu__body,768,1">
       <a href="tel:+37378882475" class="header__phone">
         <img class="image" src="@img/icons/sprite.svg#phone" alt="" />
       </a>
@@ -46,7 +46,7 @@
         </li>
       </ul>
     </div>
-    <ul class="header__lang">
+    <ul class="header__lang" data-da=".menu__body,768,1">
       <li class="menu__item current">
         <a href="">Ru</a>
       </li>
