--- a/biadecor/index.html
+++ b/biadecor/index.html
@@ -58,7 +58,7 @@
         <span></span>
       </button>
     </div>
-    <div class="header__social social">
+    <div class="header__social social" data-da=".menu__body,768,1">
       <a href="tel:+37378882475" class="header__phone">
         <img class="image" src="images/icons/sprite.svg#phone" alt="" />
       </a>
@@ -75,7 +75,7 @@
         </li>
       </ul>
     </div>
-    <ul class="header__lang">
+    <ul class="header__lang" data-da=".menu__body,768,1">
       <li class="menu__item current">
         <a href="">Ru</a>
       </li>
@@ -206,10 +206,10 @@
           </li>
         </ul>
       </div>
-      <a href="tel:+37378882475" class="contacts__adress"
+      <a href="tel:+37378882475" class="contacts__phone"
         >Тел: +373 78 882 475</a
       >
-      <a href="tel:+37378882475" class="contacts__adress"
+      <a href="tel:+37378882475" class="contacts__phone"
         >Тел: +373 78 882 475</a
       >
     </div>
