--- a/#src/html/_contacts.html
+++ b/#src/html/_contacts.html
@@ -15,12 +15,12 @@
             </a>
           </li>
           <li class="contacts__item">
-            <a href="https://facebook.com" class="contacts__link">
+            <a href="https://facebook.com/biadecor.md" class="contacts__link">
               <img class="image" src="@img/icons/sprite.svg#facebook" alt="" />
             </a>
           </li>
           <li class="contacts__item">
-            <a href="https://instagram.com" class="contacts__link">
+            <a href="https://instagram.com/biadecor.srl" class="contacts__link">
               <img class="image" src="@img/icons/sprite.svg#instagram" alt="" />
             </a>
           </li>
