--- a/#src/html/header.html
+++ b/#src/html/header.html
@@ -35,12 +35,12 @@
       </a>
       <ul class="social__list">
         <li class="social__item">
-          <a href="https://instagram.com">
+          <a href="https://instagram.com/biadecor.srl">
             <img class="image" src="@img/icons/sprite.svg#instagram" alt="" />
           </a>
         </li>
         <li class="social__item">
-          <a href="https://facebook.com">
+          <a href="https://facebook.com/biadecor.md">
             <img class="image" src="@img/icons/sprite.svg#facebook" alt="" />
           </a>
         </li>
