--- a/biadecor/fabric.html
+++ b/biadecor/fabric.html
@@ -11,17 +11,37 @@
     rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
   />
-  <link rel="stylesheet" href="css/style.css?ver=1.0.0" />
+  <link rel="stylesheet" href="css/style.css?ver=1.1.0" />
   <!-- подключение скриптов -->
   <script defer src="js/vendor/swiper-bundle.min.js"></script>
   <script defer src="js/main.min.js"></script>
   <!-- подключение favicon -->
   <link
+    rel="apple-touch-icon"
+    sizes="180x180"
+    href="images/favicon/apple-touch-icon.png"
+  />
+  <link
     rel="icon"
     type="image/png"
     sizes="32x32"
-    href="resources/favicon.png"
+    href="images/favicon/favicon-32x32.png"
   />
+  <link
+    rel="icon"
+    type="image/png"
+    sizes="16x16"
+    href="images/favicon/favicon-16x16.png"
+  />
+  <link rel="manifest" href="images/favicon/site.webmanifest" />
+  <link
+    rel="mask-icon"
+    href="images/favicon/safari-pinned-tab.svg"
+    color="#5bbad5"
+  />
+  <meta name="msapplication-TileColor" content="#da532c" />
+  <meta name="theme-color" content="#ffffff" />
+  <!-- title -->
   <title>Каталог тканей</title>
 </head>
 
@@ -64,12 +84,12 @@
       </a>
       <ul class="social__list">
         <li class="social__item">
-          <a href="https://instagram.com">
+          <a href="https://instagram.com/biadecor.srl">
             <img class="image" src="images/icons/sprite.svg#instagram" alt="" />
           </a>
         </li>
         <li class="social__item">
-          <a href="https://facebook.com">
+          <a href="https://facebook.com/biadecor.md">
             <img class="image" src="images/icons/sprite.svg#facebook" alt="" />
           </a>
         </li>
