--- a/biadecor/jalousie.html
+++ b/biadecor/jalousie.html
@@ -112,11 +112,17 @@
     <h2 class="header__ver header__ver-right roller__head">Рулонные</h2>
     <div class="boxes roller__boxes roller__boxes-first">
       <div class="box-img">
-        <img class="image" src="images/jalousie/roller.png" alt="" />
+        <picture>
+          <source
+            media="(max-width: 992px)"
+            srcset="images/jalousie/roller.jpg"
+          />
+          <img class="image" src="images/jalousie/roller.png" alt="" />
+        </picture>
       </div>
       <div class="box-text roller__box roller__box-first">
         <h2 class="box-title">Рулонные жалюзи</h2>
-        <div class="box-text">
+        <div class="box-descr">
           <p>
             Рулонные шторы совмещают в себе качества штор и жалюзи. Рулонные
             шторы можно изготовить и на окна не стандартной формы. Большая гамма
@@ -150,11 +156,17 @@
     <h2 class="header__ver header__ver-right roller__head">день ночь</h2>
     <div class="boxes roller__boxes roller__boxes-nobg">
       <div class="box-img">
-        <img class="image" src="images/jalousie/day-night.png" alt="" />
+        <picture>
+          <source
+            media="(max-width: 992px)"
+            srcset="images/jalousie/day-night.jpg"
+          />
+          <img class="image" src="images/jalousie/day-night.png" alt="" />
+        </picture>
       </div>
       <div class="box-text roller__box">
         <h2 class="box-title">Жалюзи “День-Ночь”</h2>
-        <div class="box-text">
+        <div class="box-descr">
           <p>
             Шторы «День-Ночь» (Зебра) - один из самых популярных видов жалюзей,
             благодарая тому что их можно поднимать и опускать, регулируя степень
@@ -181,11 +193,14 @@
     <h2 class="header__ver header__ver-right roller__head">римские</h2>
     <div class="boxes roller__boxes">
       <div class="box-img">
-        <img class="image" src="images/jalousie/rim.png" alt="" />
+        <picture>
+          <source media="(max-width: 992px)" srcset="images/jalousie/rim.jpg" />
+          <img class="image" src="images/jalousie/rim.png" alt="" />
+        </picture>
       </div>
       <div class="box-text roller__box">
         <h2 class="box-title">Римские шторы</h2>
-        <div class="box-text">
+        <div class="box-descr">
           <p>
             Римские шторы - это элегантный способ закрыть оконные проемы и при
             этом украсить интерьер. В отличии от рулонных штор, ткани римских
@@ -209,11 +224,14 @@
     <h2 class="header__ver header__ver-right roller__head">деревянные</h2>
     <div class="boxes roller__boxes roller__boxes-nobg">
       <div class="box-img">
-        <img class="image" src="images/jalousie/wood.png" alt="" />
+        <picture>
+          <source media="(max-width: 992px)" srcset="images/jalousie/wood.jpg" />
+          <img class="image" src="images/jalousie/wood.png" alt="" />
+        </picture>
       </div>
       <div class="box-text roller__box">
         <h2 class="box-title">Деревянные жалюзи</h2>
-        <div class="box-text">
+        <div class="box-descr">
           <p>
             Шторы плиссе создают комфортный уровень приватности, помогая
             регулировать степень естественного освещения, защитить от солнечных
@@ -237,11 +255,17 @@
     <h2 class="header__ver header__ver-right roller__head">роллеты</h2>
     <div class="boxes roller__boxes">
       <div class="box-img">
-        <img class="image" src="images/jalousie/rollet.png" alt="" />
+        <picture>
+          <source
+            media="(max-width: 992px)"
+            srcset="images/jalousie/rollet.jpg"
+          />
+          <img class="image" src="images/jalousie/rollet.png" alt="" />
+        </picture>
       </div>
       <div class="box-text roller__box">
         <h2 class="box-title">Роллеты (роллставни)</h2>
-        <div class="box-text">
+        <div class="box-descr">
           <p>
             Роллеты используются для защиты от пыли, света и взлома.
             Устанавливаются на оконные проемёмы, дверные и гаражные. Управление
@@ -264,11 +288,14 @@
     <h2 class="header__ver header__ver-last roller__head">маскинтная сетка</h2>
     <div class="boxes roller__boxes roller__boxes-nobg">
       <div class="box-img">
-        <img class="image" src="images/jalousie/wood.png" alt="" />
+        <picture>
+          <source media="(max-width: 992px)" srcset="images/jalousie/wood.jpg" />
+          <img class="image" src="images/jalousie/wood.png" alt="" />
+        </picture>
       </div>
       <div class="box-text roller__box">
         <h2 class="box-title">Маскитная сетка</h2>
-        <div class="box-text">
+        <div class="box-descr">
           <p>
             Москитная сетка —  это способ обеспечить спящему защиту от
             проникновения комаров, мух и других насекомых-вредителей в
